# aegisscan

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  config.yaml  main.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
core/: __init__.py  os_detect.py  port_parser.py  scanner_engine.py  service_fingerprint.py  timing.py  web_recon.py
dashboard/: __init__.py  app.py
dashboard/static/: style.css
dashboard/templates/: dashboard.html
data/: __init__.py  service-probes.txt
database/: __init__.py  migrations.py  models.py  repository.py
reporting/: __init__.py  report_generator.py
tests/: __init__.py  run_all.py  test_database.py  test_layering.py  test_port_parser.py  test_scanner.py
utils/: __init__.py  constants.py  logger.py  validators.py
