[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "aegisscan"
version = "4.0.0"
description = "Professional async network reconnaissance scanner"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.8"
keywords = ["network", "scanner", "security", "reconnaissance", "async"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Information Technology",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
    "Topic :: System :: Networking",
]

# Core has ZERO required dependencies
dependencies = []

[project.optional-dependencies]
web = ["flask>=2.0.0", "flask-cors>=3.0.0"]
pdf = ["reportlab>=3.6.0"]
config = ["pyyaml>=6.0"]
logging = ["colorlog>=6.0.0"]
perf = ["uvloop>=0.17.0"]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0.0",
]
all = [
    "flask>=2.0.0",
    "flask-cors>=3.0.0",
    "reportlab>=3.6.0",
    "pyyaml>=6.0",
    "colorlog>=6.0.0",
]

[project.scripts]
aegisscan = "main:main"

[project.urls]
Homepage = "https://github.com/faza-kamal/aegisscan"
Issues   = "https://github.com/faza-kamal/aegisscan/issues"

[tool.setuptools.packages.find]
include = ["core*", "database*", "dashboard*", "reporting*", "utils*", "data*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[tool.coverage.run]
source = ["core", "database", "reporting", "utils"]
omit = ["tests/*", "*/migrations.py"]

[tool.coverage.report]
show_missing = true
skip_covered = false
